# faceRecog

./: .gitignore  ACT.KPI.202510.9253_1763017984.xlsx  README.md  decompress-folders.ps1  exp.py  main.py  notes.txt  pyproject.toml  stable-system.txt  stable-system1.txt
RandomScripts/: check_cctv.ps1  create_task_scheduler_logon.ps1  run_python_with_venv_organized-MagickPC-0.ps1  run_python_with_venv_organized-MagickPC.ps1  run_python_with_venv_organized-TowerCPU.ps1  script-organized-TowerCPU-0.ps1  searchGitHistory.py  verification.py
RandomScripts/0_history/: checkTF.py  create_task_scheduler_logon-TowerCPU.ps1  run_python_with_venv_organized_interactive-MagickPC.ps1  run_python_with_venv_organized_interactive-MagickPC1.ps1
RandomScripts/1_laptop/: compress-folders.ps1  maskDetect.ps1
RandomScripts/1_magick/: maskDetect.ps1
RandomScripts/1_towerCPU/: NOT-TESTED.ps1  USED-ref-other-test.ps1  USED-ref-testing-2.ps1  USED-test-1.ps1  USED-testing-2.ps1  maskDetect.ps1  process-run-0 copy.ps1  process-run-0.ps1  process-run-1.ps1
RandomScripts/Bicubic-interpolation/: bicubic-0.py  bicubic-1.py  bicubic.py
RandomScripts/history/: run_python_with_venv_organized-MagickPC copy.ps1  run_python_with_venv_organized-MagickPC.ps1  run_python_with_venv_organized.ps1
cctv_connect/: cctvRecord.py  documentation.txt  rtsp.py  rtsp2.py  rtsp3.py
extractor/: cameraFrameExtractor.py  documentation.txt  moveSameFile.ipynb  shuffleBigDataset.ipynb  videoFrameExtractor.py
process-run/Magick_Process_MaskDetect_2026-01-27_15-01-30/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-02-33/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-09-12/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-22-20/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-23-00/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-23-40/: metadata.json
process-run/Magick_Process_MaskDetect_2026-01-27_15-24-21/: metadata.json
process-run/Run_Process_Testing-script_2026-01-27_10-06-31/: independent_monitor.ps1
process-run/Run_Process_TowerCPU2026-01-23_13-21-55/: metadata.json
process-run/Run_Process_TowerCPU2026-01-23_14-43-33/: metadata.json
process-run/Run_Process_TowerCPU2026-01-23_14-47-39/: metadata.json
process-run/Run_Process_TowerCPU2026-01-23_15-28-47/: metadata.json
run_py/: C_threading.py  autoEmbedPerson.py  yolo-face_1.py  yolo-face_2.0.py  yolo-face_2.1.py  yolo-face_2.2.py
run_py/DAG/: app.py  (+3 more)
(+352 files in other folders)
