[project]
name = "facerecog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.1",
    "astunparse==1.6.3",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "chromadb>=1.4.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "deepface==0.0.97",
    "filelock==3.20.3",
    "fire==0.7.1",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "fsspec==2026.1.0",
    "gast==0.7.0",
    "gdown==5.2.1",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "gunicorn==23.0.0",
    "h5py==3.15.1",
    "humanfriendly==10.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "keras==3.13.1",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "lightecc==0.0.4",
    "lightphe==0.0.20",
    "lz4==4.4.5",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "mtcnn==1.0.0",
    "namex==0.1.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "onnxruntime==1.23.2",
    "opencv-python==4.13.0.90",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "polars==1.37.1",
    "polars-runtime-32==1.37.1",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "pyreadline3==3.5.4",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "retina-face==0.0.17",
    "rich==14.2.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.3.0",
    "tf-keras==2.20.1",
    "threadpoolctl==3.6.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "ultralytics==8.4.6",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
    "voyager==2.1.0",
    "werkzeug==3.1.5",
    "wheel==0.45.1",
    "wrapt==2.0.1",
]
